아동복지시설 메인, 상세 / 유채원 / 02-06 23:56 [주요내용] - 아동복지시설 이미지 추가 	wf10.jpg ~ wf20.jpg
- 메인, 상세 시설 이미지 크기가 달라져도 레이아웃 고정되도록 수정
	welfare-main.css, welfare-detail.css

- 메인, 상세 랜덤으로 이미지 뜨도록 수정
- 메인, 상세 업종명 수정
- 상세 이메일 수정
	welfare-main.html, welfare-detail.html,
	WelfareMapper.java, WelfareController.java

--- a/src/main/resources/static/css/welfare-main.css
+++ b/src/main/resources/static/css/welfare-main.css
@@ -38,3 +38,11 @@
 .page>.page-link {
     box-shadow: 0 .5rem 1.125rem -0.425rem rgba(252, 108, 147, .9)
 }
+
+
+/* 23.02.06 시설 이미지 레이아웃 수정 */
+.card-img-top img {
+	width: 400px;
+	height: 300px;
+	object-fit: cover;
+}
