--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -71,7 +71,7 @@
                   <label class="form-check-label" for="si-remember">아이디를 기억하시겠습니까?</label>
                 </div><a class="fs-sm login" href="#">비밀번호 찾기</a>
               </div>
-              <a href="#"><img class="cgw16 cgw17 cgw18" th:src="@{/img/ukids/8.png}"></a>
+              <a th:href="@{https://kauth.kakao.com/oauth/authorize?response_type=code&client_id=4f6893c26b967b74677e6e11e11210b6&redirect_uri=http://localhost/kakaoLogin}"><img class="cgw16 cgw17 cgw18" th:src="@{/img/ukids/8.png}"></a>
               <button class="btn btn-login btn-shadow d-block cgw17 cgw10" type="submit">로그인</button>
             </form>
 
