--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -45,6 +45,11 @@
     * {
       font-family: 'NanumSquareRound';
     }
+    
+    .form-check-input:checked {
+      background-color: #fc6c93;
+  }
+    
   </style>
 
 </head>
@@ -85,26 +90,26 @@
               <div class="card-body">
                 <h2 class="h4 mb-3 ms-5 mt-2">회원가입</h2>
                 <hr>
-                <form class="needs-validation mt-3 ms-3" novalidate>
+                <form class="needs-validation mt-3 ms-3" novalidate th:action="@{/member/enroll}" method="post">
                   <div class="product-details-cgw pb-3 cgw16 ms-5 mt-4 border-end">
                     <div class="col-sm-10">
                       <label class="form-label" for="account-fn">아이디</label><br>
-                      <input class="form-control-cgw2" type="text" id="account-fn" >
+                      <input class="form-control-cgw2" type="text" name="id" id="newId" placeholder="아이디 (4글자 이상)" required>
                       <button class="btn btn-primary-cgw2 btn-sm mx-4" type="button" id="checkDuplicate" value="중복검사">중복확인</button>
                       
                       <!-- 회원가입 관련 스크립트 코드 -->
                       <script type="text/javascript">
                   	$(function() {
-                		$("#pass2").blur((event) => {
-                			let pass1 = $("#pass1").val();			
+                		$("#password2").blur((event) => {
+                			let pass1 = $("#password1").val();			
                 			let pass2 = $(event.target).val();
                 			
                 			if(pass1.trim() != pass2.trim()) {
                 				alert("비밀번호가 일치하지 않습니다.");
                 				
-                				$("#pass1").val("");
+                				$("#password1").val("");
                 				$(event.target).val("");
-                				$("#pass1").focus();
+                				$("#password1").focus();
                 			}
                 		});
                     	
@@ -145,45 +150,37 @@
                       </script>
                     </div>
                     <div class="col-sm-9">
-                      <label class="form-label" for="account-ln">이름</label>
-                      <input class="form-control-cgw1" type="text" id="account-ln">
+                      <label class="form-label" for="name">이름</label>
+                      <input class="form-control-cgw1" type="text" name="name" id="name">
                     </div>
                     <div class="col-sm-9">
                       <label class="form-label" for="account-pass">비밀번호</label>
                       <div class="password-toggle">
-                        <input class="form-control" type="password" id="account-pass">
-                        <label class="password-toggle-btn" aria-label="Show/hide password">
-                          <input class="password-toggle-check" type="checkbox"><span
-                            class="password-toggle-indicator"></span>
-                        </label>
+                        <input class="form-control" type="password" name="password" id="password" required>
                       </div>
                     </div>
                     <div class="col-sm-9">
-                      <label class="form-label" for="account-confirm-pass">비밀번호 확인</label>
+                      <label class="form-label" for="password2">비밀번호 확인</label>
                       <div class="password-toggle">
-                        <input class="form-control" type="password" id="account-confirm-pass">
-                        <label class="password-toggle-btn" aria-label="Show/hide password">
-                          <input class="password-toggle-check" type="checkbox"><span
-                            class="password-toggle-indicator"></span>
-                        </label>
+                        <input class="form-control" type="password" id="password2" required>
                       </div>
                     </div>
                     <div class="col-sm-9">
                       <label class="form-label" for="account-email">이메일</label>
-                      <input class="form-control-cgw1" type="email" id="account-email" placeholder="ukids@example.com">
+                      <input class="form-control-cgw1" type="email" name="email" id="account-email" placeholder="ukids@example.com">
                     </div>
                     <div class="col-sm-9">
                       <label class="form-label" for="account-phone">연락처</label>
-                      <input class="form-control-cgw1" type="text" id="account-phone" placeholder="010-0000-0000">
+                      <input class="form-control-cgw1" type="text" name="phone" id="account-phone" placeholder="010-0000-0000">
                     </div>
                     <div class="col-sm-9">
                       <label class="form-label" for="account-address">주소</label>
                       <div class="">
-                        <input class="form-control-postcode" type="text" id="addressPostcode" placeholder="우편번호">
+                        <input class="form-control-postcode" type="text" name="postCode" id="addressPostcode" placeholder="우편번호">
                         <input type="button" class="btn btn-primary-cgw2 btn-sm mx-4" value="우편번호 찾기"
                           onclick="kakaopost()">
-                        <input class="form-control-cgw1" type="text" id="addressBasic" placeholder="주소">
-                        <input class="form-control-cgw1" type="text" id="addressDetail" placeholder="상세주소">
+                        <input class="form-control-cgw1" type="text" name="address" id="addressBasic" placeholder="주소">
+                        <input class="form-control-cgw1" type="text" name="address2" id="addressDetail" placeholder="상세주소">
                       </div>
                     </div>
                   </div>
@@ -194,39 +191,53 @@
                     <br>
                     <div class="col-sm-12">
                       <label class="form-label" for="account-childNum">자녀 수</label>&nbsp;
-                      <input class="form-control-postcode" type="number" id="account-childNum" value="0" min="0" max="10" 
+                      <input class="form-control-postcode" type="number" name="kidNum" id="account-childNum" value="0" min="0" max="3" 
                         required>&nbsp;&nbsp;&nbsp;명<br><br>
+                      <!-- 자녀 나이 체크박스 제한 관련 스크립트 -->  
+                      <script type="text/javascript">
+                      $(document).ready(function(){ 
+                    	$("input[type='checkbox']").on("click", function(){ 
+                    		let count = $("input:checked[type='checkbox']").length;     
+                    		let limit = $("#account-childNum").val();
+                    			    if(count > limit){ 
+                    			    $(this).prop("checked" , false); 
+                    	                    //또는 this.checked=false;
+                    				alert("선택한 자녀의 수 만큼 체크가 가능합니다."); 
+                    			  }		 
+                    		}); 
+                    	}); 
+						
+                      </script>
                       <label class="form-label" for="account-childAge">자녀 나이</label>
                       <div class="">
-                        <input class="form-check-input" type="checkbox" id="account-childAge">&nbsp;
-                        <label class="form-check-label" for="account-childAge">0</label>&nbsp;&nbsp;&nbsp;
-                        <input class="form-check-input" type="checkbox" id="account-childAge">&nbsp;
+                        <input class="form-check-input" type="checkbox" name="kidAge" id="account-childAge" value="0세">&nbsp;
+                        <label class="form-check-label" for="account-childAge">0</label >&nbsp;&nbsp;&nbsp;
+                        <input class="form-check-input" type="checkbox" name="kidAge" id="account-childAge" value="1세">&nbsp;
                         <label class="form-check-label" for="account-childAge">1</label>&nbsp;&nbsp;&nbsp;
-                        <input class="form-check-input" type="checkbox" id="account-childAge">&nbsp;
+                        <input class="form-check-input" type="checkbox" name="kidAge" id="account-childAge" value="2세">&nbsp;
                         <label class="form-check-label" for="account-childAge">2</label>&nbsp;&nbsp;&nbsp;
-                        <input class="form-check-input" type="checkbox" id="account-childAge">&nbsp;
+                        <input class="form-check-input" type="checkbox" name="kidAge" id="account-childAge" value="3세">&nbsp;
                         <label class="form-check-label" for="account-childAge">3</label>&nbsp;&nbsp;&nbsp;
-                        <input class="form-check-input" type="checkbox" id="account-childAge">&nbsp;
+                        <input class="form-check-input" type="checkbox" name="kidAge" id="account-childAge" value="4세">&nbsp;
                         <label class="form-check-label" for="account-childAge">4</label>&nbsp;&nbsp;&nbsp;
-                        <input class="form-check-input" type="checkbox" id="account-childAge">&nbsp;
+                        <input class="form-check-input" type="checkbox" name="kidAge" id="account-childAge" value="5세">&nbsp;
                         <label class="form-check-label" for="account-childAge">5</label>&nbsp;&nbsp;&nbsp;
-                        <input class="form-check-input" type="checkbox" id="account-childAge">&nbsp;
-                        <label class="form-check-label" for="account-childAge">6</label>
                       </div>
+                      
                     </div>
                     <hr class="mt-4">
                     <h2 class="h4 mb-3">선생님이신가요?</h2>
                     <p class="fs-sm text-muted mb-4">선생님입력란입니다. (필수입력 사항입니다.)</p>
                     <div class="col-sm-12">
                       <label class="form-label" for="checkout-country">소속</label>
-                      <select class="form-select" id="checkout-country">
-                        <option>유치원</option>
-                        <option>어린이집</option>
+                      <select class="form-select" name="field" id="checkout-country">
+                        <option value="유치원">유치원</option>
+                        <option value="어린이집">어린이집</option>
                       </select>
                     </div>
                     <div class="col-sm-12">
                       <label class="form-label" for="account-phone">소속 코드</label>
-                      <input class="form-control-cgw1" type="text" id="account-phone">
+                      <input class="form-control-cgw1" type="text" name="fieldCd" id="account-phone">
                     </div>
                     <div class="col-12 text-end">
                       <button class="btn btn-primary-cgw1" type="submit"><i class="ci-user me-2 ms-n1"></i>회원가입</button>
