--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -49,6 +49,9 @@
     .form-check-input:checked {
       background-color: #fc6c93;
   }
+     .kakaoEnroll:hover{
+      opacity: 80%;
+    }
     
   </style>
 
@@ -94,7 +97,19 @@
                   <div class="product-details-cgw pb-3 cgw16 ms-5 mt-4 border-end">
                     <div class="col-sm-10">
                       <label class="form-label" for="account-fn">아이디</label><br>
+                      <th:block th:if="${kakaoMap == null}">
+                      <input type="hidden" name="kakaoToken">
+                      </th:block>
+                      <th:block th:if="${kakaoMap != null}">
+                      <input type="hidden" name="kakaoToken" th:value="${kakaoMap.id}">
+                      </th:block>
+                      
+                      <th:block th:if="${kakaoMap == null}">
                       <input class="form-control-cgw2" type="text" name="id" id="newId" placeholder="아이디 (4글자 이상)" required>
+                      </th:block>
+                      <th:block th:if="${kakaoMap != null}">
+                      <input class="form-control-cgw2" type="text" name="id" id="newId" placeholder="아이디 (4글자 이상)" th:value="${kakaoMap.email}" required>
+                      </th:block>
                       <button class="btn btn-primary-cgw2 btn-sm mx-4" type="button" id="checkDuplicate" value="중복검사">중복확인</button>
                       
                       <!-- 회원가입 관련 스크립트 코드 -->
@@ -151,12 +166,18 @@
                     </div>
                     <div class="col-sm-9">
                       <label class="form-label" for="name">이름</label>
+                      <th:block th:if="${kakaoMap == null}">
                       <input class="form-control-cgw1" type="text" name="name" id="name">
+                      </th:block>
+                      <th:block th:if="${kakaoMap != null}">
+                      <input class="form-control-cgw1" type="text" name="name" id="name" th:value="${kakaoMap.nickname}">
+                      </th:block>
+                      
                     </div>
                     <div class="col-sm-9">
                       <label class="form-label" for="account-pass">비밀번호</label>
                       <div class="password-toggle">
-                        <input class="form-control" type="password" name="password" id="password" required>
+                        <input class="form-control" type="password" name="password" id="password1" required>
                       </div>
                     </div>
                     <div class="col-sm-9">
@@ -231,6 +252,7 @@
                     <div class="col-sm-12">
                       <label class="form-label" for="checkout-country">소속</label>
                       <select class="form-select" name="field" id="checkout-country">
+                      	<option value="없음">없음</option>
                         <option value="유치원">유치원</option>
                         <option value="어린이집">어린이집</option>
                       </select>
@@ -239,7 +261,8 @@
                       <label class="form-label" for="account-phone">소속 코드</label>
                       <input class="form-control-cgw1" type="text" name="fieldCd" id="account-phone">
                     </div>
-                    <div class="col-12 text-end">
+                    <div class="col-12 text-end mb-2">
+                      <a class="kakaoEnroll d-inline-block w-50 mx-1" th:href="@{https://kauth.kakao.com/oauth/authorize?response_type=code&client_id=4f6893c26b967b74677e6e11e11210b6&redirect_uri=http://localhost/member/kakaoEnroll}"><img th:src="@{/img/ukids/9.png}"></a>
                       <button class="btn btn-primary-cgw1" type="submit"><i class="ci-user me-2 ms-n1"></i>회원가입</button>
                     </div>
                   </div>
