회원유형 관련 / 김성호 / 02-07 15:05 [주요 내용] 	- 회원가입 시 회원 유형 추가(일반[학부모], 선생님) 	- build.gradle에 메일 전송 관련 추가 	- member-mapper에 insertMember에 role 부분 수정

--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -207,6 +207,15 @@
                   </div>
                   <!-- <hr class="mt-4"> -->
                   <div class="row gx-4 gy-3 product-details cgw10 me-5 mt-2">
+                  	<h2 class="h4">회원 유형을 선택해주세요</h2>
+					<div class="form-check form-check-inline d-lnline-block mt-0" style="margin-left: 10px; width: 150px;">
+					  <input class="form-check-input" type="radio" id="user" name="role" value="ROLE_USER">
+					  <label class="form-check-label" for="user">일반회원(학부모)</label>
+					</div>
+					<div class="form-check form-check-inline d-lnline-block w-25 mt-0" style="float: left;">
+					  <input class="form-check-input" type="radio" id="teacher" name="role" value="ROLE_T">
+					  <label class="form-check-label" for="teacher">선생님</label>
+					</div><hr>
                     <h2 class="h4 mb-3">일반회원이신가요?</h2>
                     <p class="fs-sm text-muted mb-4">일반회원입력란입니다. (선택입력 사항입니다.)</p>
                     <br>
@@ -247,7 +256,7 @@
                       
                     </div>
                     <hr class="mt-4">
-                    <h2 class="h4 mb-3">선생님이신가요?</h2>
+                    <h2 class="h4 mb-3 d-inline-block">선생님이신가요?</h2>
                     <p class="fs-sm text-muted mb-4">선생님입력란입니다. (필수입력 사항입니다.)</p>
                     <div class="col-sm-12">
                       <label class="form-label" for="checkout-country">소속</label>
